Fix horizontal scroller

--- a/css/app.css
+++ b/css/app.css
@@ -451,15 +451,59 @@ div.wpcf7-response-output {
 
 /* Clients */
 
-.scroll-container {
-  width: 100%;
-  height: 100px;
-  margin-bottom: 1em;
-  position: relative;
-  text-align: center;
-  font-family: Georgia,"Times New Roman",Times,serif;
-  font-size: 16px;
-  line-height: 1.42857;
-  color: #333;
-  overflow: hidden;
+/* Container DIV - automatically generated */
+.simply-scroll-container { 
+    position: relative;
+}
+
+/* Clip DIV - automatically generated */
+.simply-scroll-clip { 
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+}
+
+/* UL/OL/DIV - the element that simplyScroll is inited on
+Class name automatically added to element */
+.simply-scroll-list { 
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+    
+.simply-scroll-list li {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+    
+.simply-scroll-list li img {
+    border: none;
+    display: block;
+}
+
+/* Custom class modifications - adds to / overrides above
+
+.simply-scroll is default base class */
+
+/* Container DIV */
+.simply-scroll { 
+    width: 100%;
+    height: 200px;
+    margin-bottom: 1em;
+}
+
+/* Clip DIV */
+.simply-scroll .simply-scroll-clip {
+    margin-top: 40px;
+    width: 100%
+    height: 200px;
+}
+    
+/* Explicitly set height/width of each list item */ 
+.simply-scroll .simply-scroll-list li {
+    float: left; /* Horizontal scroll only */
+    width: 290px;
+    height: 200px;
 }
